# doscontainer

./: .gitignore  Cargo.toml  Jenkinsfile  LICENSE  README.MD  README.md
builder/: Cargo.toml
builder/src/: error.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: audio.rs  cpu.rs  error.rs  lib.rs  storage.rs  video.rs
core/: Cargo.toml
core/src/: error.rs  layer.rs  lib.rs
disk/: Cargo.toml
disk/src/: chs.rs  disktype.rs  error.rs  floppy.rs  geometry.rs  lib.rs  raw.rs  sector.rs  sectorsize.rs  volume.rs
docs/: cascading.md  design.md  manifest.md
downloader/: Cargo.toml
downloader/src/: error.rs  lib.rs
filesystem/: Cargo.toml
filesystem/src/: allocationtable.rs  attributes.rs  bpb.rs  cluster.rs  direntry.rs  error.rs  fat.rs  fat12.rs  lib.rs  name.rs  names.rs  pool.rs  tests.rs
filesystem/src/serializer/: ibmdos100.rs  mod.rs
hwspec/: Cargo.toml
hwspec/docs/: README.MD
hwspec/src/: audio.rs  cpu.rs  error.rs  lib.rs  storage.rs  tests.rs  video.rs
inputs/: hwspec.toml  manifest.toml
manifest/: Cargo.toml
manifest/src/: disk.rs  error.rs  gameconfig.rs  gamemetadata.rs  layer.rs  lib.rs  operatingsystem.rs  os.rs  storage.rs  tests.rs
manifest/src/fields/: mod.rs  test.rs
manifest/src/layer/: mod.rs
manifest/src/loader/: mod.rs
manifest/src/validator/: error.rs  mod.rs  tests.rs
operatingsystem/: Cargo.toml
operatingsystem/src/: bpb.rs  error.rs  lib.rs  product.rs  vendor.rs  version.rs
operatingsystem/src/sysfiles/ibmdos100/: COMMAND.COM
planner/: Cargo.toml
planner/src/: error.rs  lib.rs  ossupport.rs
specs/: Cargo.toml
specs/src/: error.rs  lib.rs
specs/src/hwspec/: audio.rs  mod.rs  storage.rs  tests.rs
specs/src/manifest/: hardware.rs  layer.rs  metadata.rs  mod.rs  storage.rs  tests.rs
specs/src/types/: cpu.rs  mod.rs  storage.rs  video.rs
