[workspace]
members = [ "cli", "core","disk", "filesystem", "hwspec", "manifest", "operatingsystem",]
resolver = "2"

[workspace.dependencies]
attohttpc = { version = "0.29", features=["tls-native-vendored"] }
byte-unit = "5.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
crc32fast = { version = "1.4" }
directories = { version = "6" }
ftp = "3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
url = "2.5"
uuid = { version = "1.13", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = { version = "2.5" }
zip = "2.6"
