[workspace]
members = ["builder", "cli", "common", "disk", "filesystem", "operatingsystem", "specs", "planner"]
resolver = "2"

[workspace.dependencies]
attohttpc = { version = "0.29", features=["tls-native-vendored"] }
byte-unit = "5.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = "0.15.11"
crc32fast = { version = "1.4" }
directories = { version = "6" }
ftp = "3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3" }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.13", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = { version = "2.5" }
zip = "3.0"

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Removes panic runtime, saves space
strip = true            # Strip debug symbols from final binary
