[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
disk = { path="../disk" }
filesystem = { path="../filesystem" }
downloader = { path="../downloader" }
manifest = { path="../manifest" }
operatingsystem = { path="../operatingsystem" }
sha2 = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }