[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
ftp = "3.0.1"
reqwest = { version = "0.12.7", features=["blocking","gzip","brotli","deflate","native-tls","native-tls-vendored","rustls-tls-native-roots"]}
sha256 = "1.5.0"
tempfile = "3.12.0"
url = "2.5.4"
zip = "2.2.0"