[package]
name = "manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
attohttpc = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
ftp = { workspace = true }
