[package]
name = "manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
attohttpc = { workspace = true }
config = { workspace = true }
crc32fast = { workspace = true }
directories = { workspace = true }
ftp = { workspace = true }
log = { workspace = true }
operatingsystem = { path = "../operatingsystem" }
url = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
crc32fast = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
ftp = { workspace = true }
